kustomize/overlays/prod/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: task-tracker-prod # <--- ВАЖНО: другой неймспейс
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /prod/backend
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
